--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pixi.js": "^8.14.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
